--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="main">
   <h1>Pedro Armada - 214897</h1>
+  <h1>Arthur Rezende - 215468</h1>
   <input (keyup.enter)="CREATE_tarefa(campoNovoItem.value)" class="lg-text-input" #campoNovoItem />
  <button class="btn-primary" (click)="CREATE_tarefa(campoNovoItem.value)">
  Adicionar Tarefa</button>
